# strict-deps-regression-18.1

./: .bazelrc  BUILD.bazel  DefaultAtmosphere.java  Foo.java  README.md  Stub.java  WORKSPACE  bazel-bin  bazel-genfiles  bazel-out  bazel-strict-deps-regression-18.1  bazel-testlogs
toolchains/: BUILD
